--- a/00_tensorflow_fundamentals.ipynb
+++ b/00_tensorflow_fundamentals.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "00_tensorflow_fundamentals.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMl/V7y0JvSCPfE0+6kJM6P",
+      "authorship_tag": "ABX9TyOTyZHCPmtd6/1xW+6MRs2F",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,14 +29,132 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
-        "id": "dQyyIAk24wo2"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "dQyyIAk24wo2",
+        "outputId": "fe61cb2a-9885-4073-e492-673d747355e2"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'2.8.0'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ],
       "source": [
-        "import tensorflow as tf"
+        "import tensorflow as tf\n",
+        "tf.__version__"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "scalar = tf.constant(200)\n",
+        "scalar, scalar.ndim"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_XdRMjvV77Vx",
+        "outputId": "18639ad2-7cf5-436a-9c74-94e2bed66033"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(<tf.Tensor: shape=(), dtype=int32, numpy=200>, 0)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vector = tf.constant([200,500])\n",
+        "vector, vector.ndim"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "23XqD-Rx8C4G",
+        "outputId": "f9f38365-5929-4b26-9581-7608ea8ca689"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(<tf.Tensor: shape=(2,), dtype=int32, numpy=array([200, 500], dtype=int32)>, 1)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "matrix = tf.constant([\n",
+        "    [10, 7],\n",
+        "    [7, 10]\n",
+        "])\n",
+        "\n",
+        "matrix, matrix.ndim"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QDNkpSDO8JEU",
+        "outputId": "97529d19-675b-43b5-8434-8a4c3e82442e"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(<tf.Tensor: shape=(2, 2), dtype=int32, numpy=\n",
+              " array([[10,  7],\n",
+              "        [ 7, 10]], dtype=int32)>, 2)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "7PVH2l-k8XE-"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
