--- a/00_tensorflow_basics.ipynb
+++ b/00_tensorflow_basics.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "00_tensorflow_basics.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOTyZHCPmtd6/1xW+6MRs2F",
+      "authorship_tag": "ABX9TyNuCiw0vnPGbuIMpZAp7hgr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -148,13 +148,420 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "tensor = tf.constant([\n",
+        "    [[1, 2, 3],\n",
+        "     [4, 5, 6],\n",
+        "     [7, 8, 9]],\n",
+        "    [[9, 8, 7],\n",
+        "     [6, 5, 4],\n",
+        "     [3, 2, 1]]\n",
+        "])\n",
+        "\n",
+        "tensor, tensor.shape, tensor.ndim"
       ],
       "metadata": {
-        "id": "7PVH2l-k8XE-"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7PVH2l-k8XE-",
+        "outputId": "a9125a80-8367-4155-d936-f2a9c8808e22"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(<tf.Tensor: shape=(2, 3, 3), dtype=int32, numpy=\n",
+              " array([[[1, 2, 3],\n",
+              "         [4, 5, 6],\n",
+              "         [7, 8, 9]],\n",
+              " \n",
+              "        [[9, 8, 7],\n",
+              "         [6, 5, 4],\n",
+              "         [3, 2, 1]]], dtype=int32)>, TensorShape([2, 3, 3]), 3)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "unchangeable_tensor = tf.constant([10, 7])\n",
+        "changeable_tensor = tf.Variable([10, 7])\n",
+        "changeable_tensor, unchangeable_tensor"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mRUwD3hHCLAt",
+        "outputId": "b8828d51-aa26-4dca-8db5-3a99e65338b1"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(<tf.Variable 'Variable:0' shape=(2,) dtype=int32, numpy=array([10,  7], dtype=int32)>,\n",
+              " <tf.Tensor: shape=(2,), dtype=int32, numpy=array([10,  7], dtype=int32)>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "changeable_tensor[0].assign(7)\n",
+        "changeable_tensor"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Nvqnn7aoCdbz",
+        "outputId": "4f633855-de2d-4634-c5f0-01bbe4986f41"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Variable 'Variable:0' shape=(2,) dtype=int32, numpy=array([7, 7], dtype=int32)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "rand_1 = tf.random.Generator.from_seed(20)\n",
+        "tensor_1 = rand_1.normal(shape=(3, 2))\n",
+        "\n",
+        "rand_2 = tf.random.Generator.from_seed(20)\n",
+        "tensor_2 = rand_2.normal(shape=(3, 2))\n",
+        "\n",
+        "tensor_1, tensor_2, tensor_1 == tensor_2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "po5f3HVxCxNb",
+        "outputId": "49934a5e-d4c5-407c-c52f-661b83366b19"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(<tf.Tensor: shape=(3, 2), dtype=float32, numpy=\n",
+              " array([[ 0.88051325, -1.6833194 ],\n",
+              "        [ 0.86754173, -0.19625713],\n",
+              "        [-1.322665  , -0.02279496]], dtype=float32)>,\n",
+              " <tf.Tensor: shape=(3, 2), dtype=float32, numpy=\n",
+              " array([[ 0.88051325, -1.6833194 ],\n",
+              "        [ 0.86754173, -0.19625713],\n",
+              "        [-1.322665  , -0.02279496]], dtype=float32)>,\n",
+              " <tf.Tensor: shape=(3, 2), dtype=bool, numpy=\n",
+              " array([[ True,  True],\n",
+              "        [ True,  True],\n",
+              "        [ True,  True]])>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "rand_3 = tf.random.Generator.from_seed(20)\n",
+        "tensor_3 = rand_3.normal(shape=(3,3))\n",
+        "tensor_4 = tf.random.shuffle(tensor_3, seed=19)\n",
+        "tensor_3, tensor_4"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "s4knF1lmDM2C",
+        "outputId": "1fc5dbef-f879-4d55-c6ee-be4d454ae7f5"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(<tf.Tensor: shape=(3, 3), dtype=float32, numpy=\n",
+              " array([[ 0.88051325, -1.6833194 ,  0.86754173],\n",
+              "        [-0.19625713, -1.322665  , -0.02279496],\n",
+              "        [-0.1383193 ,  0.44207528, -0.7531523 ]], dtype=float32)>,\n",
+              " <tf.Tensor: shape=(3, 3), dtype=float32, numpy=\n",
+              " array([[-0.19625713, -1.322665  , -0.02279496],\n",
+              "        [-0.1383193 ,  0.44207528, -0.7531523 ],\n",
+              "        [ 0.88051325, -1.6833194 ,  0.86754173]], dtype=float32)>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ones = tf.ones([3, 3])\n",
+        "zeros = tf.zeros([2, 3, 4, 5])\n",
+        "ones, zeros"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OnJxZ3lgEIHI",
+        "outputId": "e69f7229-1e0e-4826-eedb-ef412a859d21"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(<tf.Tensor: shape=(3, 3), dtype=float32, numpy=\n",
+              " array([[1., 1., 1.],\n",
+              "        [1., 1., 1.],\n",
+              "        [1., 1., 1.]], dtype=float32)>,\n",
+              " <tf.Tensor: shape=(2, 3, 4, 5), dtype=float32, numpy=\n",
+              " array([[[[0., 0., 0., 0., 0.],\n",
+              "          [0., 0., 0., 0., 0.],\n",
+              "          [0., 0., 0., 0., 0.],\n",
+              "          [0., 0., 0., 0., 0.]],\n",
+              " \n",
+              "         [[0., 0., 0., 0., 0.],\n",
+              "          [0., 0., 0., 0., 0.],\n",
+              "          [0., 0., 0., 0., 0.],\n",
+              "          [0., 0., 0., 0., 0.]],\n",
+              " \n",
+              "         [[0., 0., 0., 0., 0.],\n",
+              "          [0., 0., 0., 0., 0.],\n",
+              "          [0., 0., 0., 0., 0.],\n",
+              "          [0., 0., 0., 0., 0.]]],\n",
+              " \n",
+              " \n",
+              "        [[[0., 0., 0., 0., 0.],\n",
+              "          [0., 0., 0., 0., 0.],\n",
+              "          [0., 0., 0., 0., 0.],\n",
+              "          [0., 0., 0., 0., 0.]],\n",
+              " \n",
+              "         [[0., 0., 0., 0., 0.],\n",
+              "          [0., 0., 0., 0., 0.],\n",
+              "          [0., 0., 0., 0., 0.],\n",
+              "          [0., 0., 0., 0., 0.]],\n",
+              " \n",
+              "         [[0., 0., 0., 0., 0.],\n",
+              "          [0., 0., 0., 0., 0.],\n",
+              "          [0., 0., 0., 0., 0.],\n",
+              "          [0., 0., 0., 0., 0.]]]], dtype=float32)>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "zeros.shape, zeros.ndim, tf.size(zeros)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5t40QykDES-l",
+        "outputId": "8e444624-6623-4c9a-8506-fe9c629b74a5"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(TensorShape([2, 3, 4, 5]), 4, <tf.Tensor: shape=(), dtype=int32, numpy=120>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "zeros[:2, :2 :, :2]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nA5mO3mwH4t6",
+        "outputId": "7237e362-e31c-4183-ad7b-6cf84693052a"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(2, 2, 2, 5), dtype=float32, numpy=\n",
+              "array([[[[0., 0., 0., 0., 0.],\n",
+              "         [0., 0., 0., 0., 0.]],\n",
+              "\n",
+              "        [[0., 0., 0., 0., 0.],\n",
+              "         [0., 0., 0., 0., 0.]]],\n",
+              "\n",
+              "\n",
+              "       [[[0., 0., 0., 0., 0.],\n",
+              "         [0., 0., 0., 0., 0.]],\n",
+              "\n",
+              "        [[0., 0., 0., 0., 0.],\n",
+              "         [0., 0., 0., 0., 0.]]]], dtype=float32)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ones_1 = ones[..., tf.newaxis]\n",
+        "ones_2 = tf.expand_dims(ones, axis=-1)\n",
+        "ones_1 == ones_2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RC-ar20zH8_P",
+        "outputId": "d0f41772-2f68-400e-f16b-12b3382fa03a"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(3, 3, 1), dtype=bool, numpy=\n",
+              "array([[[ True],\n",
+              "        [ True],\n",
+              "        [ True]],\n",
+              "\n",
+              "       [[ True],\n",
+              "        [ True],\n",
+              "        [ True]],\n",
+              "\n",
+              "       [[ True],\n",
+              "        [ True],\n",
+              "        [ True]]])>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ones_3 = tf.multiply(ones, 20)\n",
+        "ones_4 = ones * 20\n",
+        "ones_3, ones_4, ones_3 == ones_4"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FftX-O_pIi-z",
+        "outputId": "8b5c9ea9-9a32-4789-dfe3-46dc088be954"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(<tf.Tensor: shape=(3, 3), dtype=float32, numpy=\n",
+              " array([[20., 20., 20.],\n",
+              "        [20., 20., 20.],\n",
+              "        [20., 20., 20.]], dtype=float32)>,\n",
+              " <tf.Tensor: shape=(3, 3), dtype=float32, numpy=\n",
+              " array([[20., 20., 20.],\n",
+              "        [20., 20., 20.],\n",
+              "        [20., 20., 20.]], dtype=float32)>,\n",
+              " <tf.Tensor: shape=(3, 3), dtype=bool, numpy=\n",
+              " array([[ True,  True,  True],\n",
+              "        [ True,  True,  True],\n",
+              "        [ True,  True,  True]])>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 41
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tf.matmul(ones_3, ones_4), ones_3 @ ones_4, tf.matmul(ones_3, ones_4) == ones_3 @ ones_4"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_Zl_JMHpIvh-",
+        "outputId": "b4a14143-cedb-49b6-cca7-0436f582a3c6"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(<tf.Tensor: shape=(3, 3), dtype=float32, numpy=\n",
+              " array([[1200., 1200., 1200.],\n",
+              "        [1200., 1200., 1200.],\n",
+              "        [1200., 1200., 1200.]], dtype=float32)>,\n",
+              " <tf.Tensor: shape=(3, 3), dtype=float32, numpy=\n",
+              " array([[1200., 1200., 1200.],\n",
+              "        [1200., 1200., 1200.],\n",
+              "        [1200., 1200., 1200.]], dtype=float32)>,\n",
+              " <tf.Tensor: shape=(3, 3), dtype=bool, numpy=\n",
+              " array([[ True,  True,  True],\n",
+              "        [ True,  True,  True],\n",
+              "        [ True,  True,  True]])>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 44
+        }
+      ]
     }
   ]
 }
